Add github.com/spf13/cobra to vendor.conf
Signed-off-by: John McCabe <john@johnmccabe.net>

--- a/vendor.conf
+++ b/vendor.conf
@@ -1,2 +1,3 @@
 github.com/alexellis/faas 9a70a1b9915d7420e71dda445349d68f3f3928d8
 gopkg.in/yaml.v2 cd8b52f8269e0feb286dfeef29f8fe4d5b397e0b
+github.com/spf13/cobra 4a7b7e65864c064d48dce82efbbfed2bdc0bf2aa
